elb.tf
#resource "aws_lb" "my_load_balancer" {
#  name = "my_load_balancer"
#  internal = false
#  load_balancer_type = "application"
#  security_groups = [aws_security_group]
#}
